--- a/styles/KeyboardMenu.css
+++ b/styles/KeyboardMenu.css
@@ -21,7 +21,7 @@
 }
 
 .KeyboardMenu button:focus {
-    background: var(--meny-selected-background);
+    background: var(--menu-selected-background);
     outline: 0;
 }
 
@@ -34,6 +34,22 @@
     right: 0;
     top: 0;
     bottom: 0;
+}
+
+.DescriptionBox {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: var(--menu-font-color);
+    border-top: 1px solid var(--border-color);
+    background: var(--menu-background);
+    padding: 2px;
+}
+
+.DescriptionBox p {
+    font-size: 10px;
+    margin: 0;
 }
 
 /* Battle specific */
